# wall_following_triton

./: .gitignore  CHECKLIST_D1.md  CHECKLIST_D2.md  CMakeLists.txt  D2_FINDINGS.md  D2_GUIDE.md  D2_REPORT_NOTES.md  README.md  SETUP_VM.md  VM_README.md  package.xml  setup_d1.sh
config/: actions.yaml  actions_d2.yaml  d2_named_test_poses.yaml  d2_params.yaml  particle_filter_params.yaml  qtable_d2_qlearning_best.yaml  qtable_d2_sarsa_best.yaml
launch/: particle_filter.launch  wf_d1_demo.launch  wf_d2.launch  wf_d2_qlearning_test.launch  wf_d2_qlearning_train.launch  wf_d2_sarsa_test.launch  wf_d2_sarsa_train.launch  wf_seed_capture.launch
maps/: README.md
models/triton/: model.sdf
plugins/: CMakeLists.txt
report_d3/: .gitignore  HANDOFF.md  README.md  build.sh  main.tex  refs.bib
report_d3/figures/: README.md
report_d3/figures/data/: qlearning_rewards.csv  sarsa_rewards.csv
report_d3/figures/qualitative/: README.md
report_d3/figures/src/: build_qualitative_composite.py  export_reward_series_for_tex.py  failure_effects.py  failure_lessons_flow.py  graphics_common.py  state_action_design.py
scripts/: clean_roslaunch.sh  d2_pose_helper.py  d2_state.sh  generate_likelihood_field.py  map_utils.py  motion_model.py  particle_filter.py  particle_filter_core.py  pf_math.py  plot_d2_metrics.py  plot_pf_metrics.py  pose_capture.py  rl_d2_agent.py  sensor_model.py  state_encoder.py  teleop_particle_filter.py  triton_key_teleop.py  wf_policy_node.py
submission/: FINAL_SUBMISSION.md  README.md
test/: test_models.py
