<?xml version="1.0"?>
<package format="2">
  <name>wall_following_triton</name>
  <version>0.1.0</version>
  <description>Deliverable 1 manual Q-table policy for right-side wall following with Triton in Gazebo.</description>

  <maintainer email="student@example.com">Student Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
