<?xml version="1.0"?>
<package format="2">
  <name>wall_following_triton</name>
  <version>0.1.0</version>
  <description>
    COMPSCI 603 Project 2 package for Triton wall following.
    D1 launch: roslaunch wall_following_triton wf_d1_demo.launch
    D2 launch: roslaunch wall_following_triton wf_d2.launch algorithm:=q_learning mode:=train
  </description>

  <maintainer email="shivraj.bhatti@example.com">Shivraj Bhatti</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/shivraj-S-bhatti/wall_following_triton</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stingray_sim</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
