<?xml version="1.0"?>
<package format="2">
  <name>wall_following_triton</name>
  <version>0.1.0</version>
  <description>
    COMPSCI 603 Project 2 package for Triton right-wall following.
    Includes D1 manual policy support plus D2 Q-learning and SARSA
    with separate training and testing launch flows, evaluation-selected
    checkpoints, and manual test-start overrides for edge-case validation.
  </description>

  <maintainer email="shivraj.bhatti@example.com">Shivraj Bhatti</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/shivraj-S-bhatti/wall_following_triton</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>stingray_sim</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
